# skattemelding

./: .gitignore  Cargo.toml  README.md  backend.nix  default.nix  flake.nix
.github/workflows/: deploy.yml
2022/: naeringspesifikasjon.xml  naeringsspesifikasjon.xml  skattemelding.xml
2023/: naeringsspesifikasjon.xml  skattemelding.xml
2024/: naeringsspesifikasjon.xml  skattemelding.xml
2025/: naeringsspesifikasjon.xml  skattemelding.xml
src/: base64.rs  error.rs  file.rs  http.rs  jwt.rs  main.rs  xml.rs
templates/: altinn.html  authenticated.html  guest.html  index.html  klargjoring.html  validation.html
