[package]
name = "skattemelding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["macros"] }
axum-sessions = "0.4.1"
chrono = "0.4.24"
data-encoding = "2.3.3"
reqwest = { version = "0.11.15", features = ["json", "stream"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tera = { version = "1.18.1", default-features = false }
tokio = { version = "1.26.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xmltree = "0.10.3"
