[package]
name = "skattemelding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
chrono = "0.4.35"
data-encoding = "2.5.0"
reqwest = { version = "0.11.26", features = ["json", "stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = { version = "1.19.1", default-features = false }
tokio = { version = "1.36.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7.10"
tower-sessions = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xmltree = "0.10.3"
